<resources>
    <string name="app_name">SpaceX Dragons</string>
    <string name="login_str">Login</string>
    <string name="password_str">Password</string>
    <string name="sign_up_str">Sign up</string>
    <string name="email_str">Email</string>
    <string name="title_str">Title</string>
    <string name="content_str">Content</string>
    <string name="name_str">Name</string>
    <string name="surname_str">Surname</string>
    <string name="back_str">Back</string>
    <string name="log_out_str">Log out</string>
    <string name="save_str">Save</string>
    <string name="logout_str">Logout</string>
    <string-array name="spinnerItems">
        <item>low</item>
        <item>medium</item>
        <item>high</item>
    </string-array>
</resources>
