<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        tools:context=".RegistrationActivity">

    <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/regName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/regEmail" />


    <EditText
            android:id="@+id/regSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/regName" />


    <EditText
            android:id="@+id/regPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_str"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/regSurname"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/regPass">

        <Button
                android:id="@+id/regBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_top"
                android:text="@string/back_str"
                android:textColor="#fff"
                android:background="@color/colorPrimary" />

        <Button
                android:id="@+id/regLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_str"
                android:textColor="#fff"
                android:background="@color/colorPrimaryDark" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>