<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        tools:context=".AddTodoItemActivity">

    <EditText
            android:id="@+id/inputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/inputContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/inputTitle"/>

    <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:entries="@array/spinnerItems"
            app:layout_constraintTop_toBottomOf="@id/inputContent"/>

    <Button
            android:id="@+id/saveBtn"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_str"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerPriority"/>

</android.support.constraint.ConstraintLayout>