<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        tools:context=".LoginActivity">

    <EditText
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_str"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_str"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/inputLogin"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@id/inputPass">

        <Button
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/margin_top"
                android:text="@string/sign_up_str"
                android:textColor="#fff"
                android:background="@color/colorPrimary" />

        <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_str"
                android:textColor="#fff"
                android:background="@color/colorPrimaryDark" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>